--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -108,7 +108,7 @@
 
 		<!--  -->
 		<div layout="row" layout-align="center center" layout-wrap>
-			<div flex="100" layout="row" layout-align="center center" style="background-color: rgba(250,250,250,.2); z-index: 2">
+			<div flex="100" layout="row" layout-align="center center" style="background-color: rgba(235,235,235,.2); z-index: 2">
 				<div layout-wrap layout="row" layout-align="start center" flex="80">
 					<div flex="33">
 						<div layout="column" layout-align="start center">
@@ -134,7 +134,7 @@
 							<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
 							<md-card-header>
 								<md-card-header-text>
-									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">BOOMING ENTERTAINMENT DEVELOPMENT</span>
+									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">BOOMING ENTERTAINMENT DISTRICTS</span>
 								</md-card-header-text>
 							</md-card-header>
 							<md-card-content>
@@ -147,7 +147,7 @@
 							<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
 							<md-card-header>
 								<md-card-header-text>
-									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">ARLINGTON HIGHLANDS, A PART OF GROWING SOUTH ARLINGTON</span>
+									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">COMPLEX URBAN DEVELOPMENT</span>
 								</md-card-header-text>
 							</md-card-header>
 							<md-card-content>
@@ -178,8 +178,8 @@
 										</md-card-header>
 										<md-card-content>
 											<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-											<md-button class="md-raised md-fab" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
-	                    						<md-icon style="background-color: {{base_hue_lightest.value}}; color: {{primary_hue_normal.value}};">local_play</md-icon>
+											<md-button class="md-raised md-fab" style="background-color: {{base_hue_lightest.value}};">
+	                    						<md-icon style="color: {{primary_hue_normal.value}};">local_play</md-icon>
 	                    					</md-button>
 										</md-card-content>
 									</md-card>
@@ -193,8 +193,8 @@
 										</md-card-header>
 										<md-card-content>
 											<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-											<md-button class="md-raised md-fab" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
-	                    						<md-icon style="color: {{base_hue_lightest.value}}">local_dining</md-icon>
+											<md-button class="md-raised md-fab" style="background-color: {{base_hue_lightest.value}};">
+	                    						<md-icon style="color: {{primary_hue_normal.value}}">local_dining</md-icon>
 	                    					</md-button>
 										</md-card-content>
 									</md-card>
