--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -108,7 +108,7 @@
 
 		<!--  -->
 		<div layout="row" layout-align="center center" layout-wrap>
-			<div flex="100" layout="row" layout-align="center center" style="background-color: rgba(235,235,235,.2); z-index: 2">
+			<div flex="100" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2">
 				<div layout-wrap layout="row" layout-align="start center" flex="80">
 					<div flex="33">
 						<div layout="column" layout-align="start center">
