--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -119,7 +119,7 @@
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
-									<p style="color: {{base_hue_darkest.value}};">MMA's engineering team utilizes their extensive land development experience to help our clients secure all the entitlements required for a successful development in timely and efficient manner. We work with the client from concept to construction, integrating all disciplines to effectively manage the total project life cycle. The mma Engineering team excels at delivering technically correct, cost-effective designs. We take pride in providing personalized service to our clients, adapting to their needs and schedule.</p>
+									<p style="color: {{base_hue_darkest.value}}; line-height: 24px;">MMA's engineering team utilizes their extensive land development experience to help our clients secure all the entitlements required for a successful development in timely and efficient manner. We work with the client from concept to construction, integrating all disciplines to effectively manage the total project life cycle. The mma Engineering team excels at delivering technically correct, cost-effective designs. We take pride in providing personalized service to our clients, adapting to their needs and schedule.</p>
 								</md-card-content>
 								<md-card-actions layout="row" layout-align="start center">
 									<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
@@ -193,8 +193,8 @@
 										</md-card-header>
 										<md-card-content>
 											<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-											<md-button class="md-raised md-fab" style="background-color: {{base_hue_lightest.value}};">
-	                    						<md-icon style="color: {{primary_hue_normal.value}}">local_dining</md-icon>
+											<md-button class="md-raised md-fab" style="background-color: {{primary_hue_normal.value}};">
+	                    						<md-icon style="color: {{base_hue_lightest.value}}">local_dining</md-icon>
 	                    					</md-button>
 										</md-card-content>
 									</md-card>
