--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -107,7 +107,7 @@
 		<!--  -->
 
 		<!--  -->
-		<div layout="row" layout-align="center center" layout-wrap>
+		<div layout="row" layout-align="center center" layout-wrap style="padding-top: 64px; padding-bottom: 64px;">
 			<div flex="100" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2">
 				<div layout-wrap layout="row" layout-align="start center" flex="80">
 					<div flex="33">
