--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -107,8 +107,8 @@
 		<!--  -->
 
 		<!--  -->
-		<div layout="row" layout-align="center center" layout-wrap style="padding-top: 64px; padding-bottom: 64px;">
-			<div flex="100" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2">
+		<div layout="row" layout-align="center center" layout-wrap>
+			<div flex="100" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2; padding-top: 64px; padding-bottom: 64px;">
 				<div layout-wrap layout="row" layout-align="start center" flex="80">
 					<div flex="33">
 						<div layout="column" layout-align="start center">
