--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -22,6 +22,9 @@
 			
 		</md-subheader>
 		<!-- sticky header -->
+		<div layout="column" layout-align="start center" style="position: fixed: top: 80px; left: 0; z-index: 4; min-height: 200px; min-width: 100px; background-color: {{primary_hue_normal.value}};">
+
+		</div>
 
 
 		<!-- messaging notification -->
