--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -17,10 +17,10 @@
 						<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
 					{{nav.name}}
 					</md-button>
-					<md-menu md-position-mode="target-right target">
+					<md-menu md-position-mode="target-right target" style="background-color: {{primary_hue_normal.value}}">
 						<md-menu-content width="6">
 							<md-menu-item ng-repeat="item in [1, 2, 3]">
-								<md-button ng-click="ctrl.announceClick($index)"> 
+								<md-button style="color: {{base_hue_lightest.value}};" ng-click="ctrl.announceClick($index)"> 
 									<span md-menu-align-target>Option</span> {{item}} 
 								</md-button>
 							</md-menu-item>
