--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -13,19 +13,85 @@
 				</div>
 
 				<div flex-gt-sm="66" layout-align="end center" layout="row">
-					<md-menu md-position-mode="target-right target" style="background-color: {{primary_hue_normal.value}}">
-						<md-button ng-click="$mdMenu.open($event)" style="color: {{base_hue_darkest.value}};" ng-repeat="nav in navigation">
-							<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
-						{{nav.name}}
-						</md-button>
-						<md-menu-content width="6">
-							<md-menu-item ng-repeat="item in [1, 2, 3]">
-								<md-button style="color: {{base_hue_lightest.value}};" ng-click="ctrl.announceClick($index)"> 
-									<span md-menu-align-target>Option</span> {{item}} 
-								</md-button>
-							</md-menu-item>
-						</md-menu-content>
-					</md-menu>
+					<md-menu-bar>
+						<md-menu>
+							<md-button style="color: {{base_hue_darkest.value}};">
+								HOME
+							</md-button>
+						</md-menu>
+						<md-menu>
+							<md-button ng-click="@mdMenu.open()" style="color: {{base_hue_darkest.value}};">
+								<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
+								PROJECTS
+							</md-button>
+							<md-menu-content>
+								<md-menu-item>
+									<md-button>
+									Project 1
+									</md-button>
+								</md-menu-item>
+								<md-menu-item>
+									<md-button>
+									Project 2
+									</md-button>
+								</md-menu-item>
+							</md-menu-content>
+						</md-menu>
+						<md-menu>
+							<md-button ng-click="@mdMenu.open()" style="color: {{base_hue_darkest.value}};">
+								<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
+								SERVICES
+							</md-button>
+							<md-menu-content>
+								<md-menu-item>
+									<md-button>
+									Service 1
+									</md-button>
+								</md-menu-item>
+								<md-menu-item>
+									<md-button>
+									Service 2
+									</md-button>
+								</md-menu-item>
+							</md-menu-content>
+						</md-menu>
+						<md-menu>
+							<md-button ng-click="@mdMenu.open()" style="color: {{base_hue_darkest.value}};">
+								<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
+								RESOURCES
+							</md-button>
+							<md-menu-content>
+								<md-menu-item>
+									<md-button>
+									Resource 1
+									</md-button>
+								</md-menu-item>
+								<md-menu-item>
+									<md-button>
+									Resource 2
+									</md-button>
+								</md-menu-item>
+							</md-menu-content>
+						</md-menu>
+						<md-menu>
+							<md-button ng-click="@mdMenu.open()" style="color: {{base_hue_darkest.value}};">
+								<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
+								ABOUT
+							</md-button>
+							<md-menu-content>
+								<md-menu-item>
+									<md-button>
+									Our History
+									</md-button>
+								</md-menu-item>
+								<md-menu-item>
+									<md-button>
+									Our Professionals
+									</md-button>
+								</md-menu-item>
+							</md-menu-content>
+						</md-menu>
+					</md-menu-bar>
 				</div>
 			</div>
 			
