--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -20,7 +20,7 @@
 							</md-button>
 						</md-menu>
 						<md-menu>
-							<md-button ng-click="@mdMenu.open()" style="color: {{base_hue_darkest.value}};">
+							<md-button ng-click="$mdMenu.open()" style="color: {{base_hue_darkest.value}};">
 								<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
 								PROJECTS
 							</md-button>
@@ -38,7 +38,7 @@
 							</md-menu-content>
 						</md-menu>
 						<md-menu>
-							<md-button ng-click="@mdMenu.open()" style="color: {{base_hue_darkest.value}};">
+							<md-button ng-click="$mdMenu.open()" style="color: {{base_hue_darkest.value}};">
 								<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
 								SERVICES
 							</md-button>
@@ -56,7 +56,7 @@
 							</md-menu-content>
 						</md-menu>
 						<md-menu>
-							<md-button ng-click="@mdMenu.open()" style="color: {{base_hue_darkest.value}};">
+							<md-button ng-click="$mdMenu.open()" style="color: {{base_hue_darkest.value}};">
 								<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
 								RESOURCES
 							</md-button>
@@ -74,7 +74,7 @@
 							</md-menu-content>
 						</md-menu>
 						<md-menu>
-							<md-button ng-click="@mdMenu.open()" style="color: {{base_hue_darkest.value}};">
+							<md-button ng-click="$mdMenu.open()" style="color: {{base_hue_darkest.value}};">
 								<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
 								ABOUT
 							</md-button>
