--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -1,8 +1,9 @@
+<style>
+	md-menu-item {min-height: 48px;}
+</style>
 <div ng-include src="'application/global/style.html'"></div>
 <md-content class="page" style="height: {{window_height}}px">
-
 	<section ng-cloak>
-
 		<!-- sticky header -->
 		<md-subheader class="md-whiteframe-4dp header" layout-align="center center" layout="row" layout flex style="z-index: 5">
 
