--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -305,6 +305,25 @@
 		</div>
 		<!--  -->
 
+		<!--  -->
+		<div layout="row" layout-align="center center">
+			<md-card layout="row" layout-align="center center" class="md-whiteframe-4dp" style="background: {{primary_hue_normal.value}}; width: 80%; margin-bottom: -64px; position: relative;">
+				<div flex="33" layout="column" layout-align="center center" style="background-color: {{primary_hue_normal.value}}; height: 100%; min-height: 600px">
+					
+				</div>
+				<div flex="66" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
+					<div layout-wrap layout="row" layout-align="start center">
+						<div>
+							<div layout-wrap layout="row" layout-align="center center">
+								
+							</div>
+						</div>
+					</div>
+				</div>
+			</md-card>
+		</div>
+		<!--  -->
+
 		<div layout="column" layout-align="center center" class="footer-container" flex style="background-color: {{base_hue_darkest.value}}; overflow: hidden; position: relative;">
 			<div class="footer-content-top" layout="row" layout-padding flex>
 				<div layout="column" layout-padding layout-align="center center" flex="33">
