--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -276,28 +276,28 @@
 								</div>
 						</div>
 						<div layout-padding flex="33">
-								<div flex layout="column" layout-align="center center">
-									<md-card style="background: #fafafa; height: 100%;">
-										<md-card-header>
-											<md-card-header-text>
-												<span class="md-title" style="font-size: 24px; font-weight: bold; color: {{base_hue_darkest.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
-											</md-card-header-text>
-										</md-card-header>
-										<md-card-content>
-											<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-										</md-card-content>
-									</md-card>
-									<md-card style="background: #fafafa; height: 100%;">
-										<md-card-header>
-											<md-card-header-text>
-												<span class="md-title" style="font-size: 24px; font-weight: bold; color: {{base_hue_darkest.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
-											</md-card-header-text>
-										</md-card-header>
-										<md-card-content>
-											<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-										</md-card-content>
-									</md-card>
-								</div>
+							<div flex layout="column" layout-align="center center">
+								<md-card style="background: #fafafa; height: 100%;">
+									<md-card-header>
+										<md-card-header-text>
+											<span class="md-title" style="font-size: 24px; font-weight: bold; color: {{base_hue_darkest.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
+										</md-card-header-text>
+									</md-card-header>
+									<md-card-content>
+										<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+									</md-card-content>
+								</md-card>
+								<md-card style="background: #fafafa; height: 100%;">
+									<md-card-header>
+										<md-card-header-text>
+											<span class="md-title" style="font-size: 24px; font-weight: bold; color: {{base_hue_darkest.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
+										</md-card-header-text>
+									</md-card-header>
+									<md-card-content>
+										<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+									</md-card-content>
+								</md-card>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -307,7 +307,9 @@
 
 		<!--  -->
 		<div layout="row" layout-align="center center">
-			<md-card layout="row" layout-align="center center" class="md-whiteframe-4dp" style="background: {{primary_hue_normal.value}}; width: 80%; margin-bottom: -64px; position: relative;">
+			<md-card layout="row" layout-align="center center" class="md-whiteframe-16dp" style="background: {{base_hue_lightest.value}}; width: 80%; margin-bottom: -64px; position: relative;">
+				<div flex="100" style="background-color: #F5F5F5; z-index: 2; min-height: 80px;">
+				</div>
 				<div flex="33" layout="column" layout-align="center center" style="background-color: {{primary_hue_normal.value}}; height: 100%; min-height: 600px">
 					
 				</div>
