--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -307,7 +307,7 @@
 
 		<!--  -->
 		<div layout="row" layout-align="center center">
-			<md-card layout-wrap layout="row" layout-align="center center" class="md-whiteframe-16dp" style="background: {{base_hue_lightest.value}}; width: 80%; margin-bottom: -64px; position: relative; max-height: 600px; min-height: 600px;">
+			<md-card layout-wrap layout="row" layout-align="center center" class="md-whiteframe-16dp" style="background: {{base_hue_lightest.value}}; width: 80%; margin-bottom: -64px; position: relative; max-height: 600px; min-height: 600px; overflow: hidden">
 				<div class="md-whiteframe-4dp" style="background-color: #F5F5F5; z-index: 2; min-height: 80px; position: absolute; top: 0; left: 0; width: 100%;" layout="row" layout-align="start center">
 					<span class="md-title" style="padding: 16px; font-size: 24px; font-weight: bold; color: {{base_hue_darkest.value}};">Mycoskie + McInnis + Associates Blog</span>
 				</div>
