--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -311,11 +311,13 @@
 				<div class="md-whiteframe-4dp" style="background-color: #F5F5F5; z-index: 2; min-height: 80px; position: absolute; top: 0; left: 0; width: 100%;" layout="row" layout-align="start center">
 					<span class="md-title" style="padding: 16px; font-size: 24px; font-weight: bold; color: {{base_hue_darkest.value}};">Mycoskie + McInnis + Associates Blog</span>
 				</div>
-				<div flex-gt-sm="20" layout="column" layout-align="center center" style="background-color: {{primary_hue_normal.value}}; height: 100%;">
-				</div>
-				<div flex="80" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2; overflow-y: auto; position: relative">
-					<div layout="column" layout-align="start center" style="min-height: 800px; position: absolute; top: 0; left: 0;">
+				<div layout="row" layout-wrap>
+					<div flex="20" layout="column" layout-align="center center" style="background-color: {{primary_hue_normal.value}}; height: 100%;">
+					</div>
+					<div flex="80" layout="column" layout-align="center center" style="background-color: #fafafa; overflow-y: auto; position: relative">
+						<div layout="column" layout-align="start center" style="min-height: 800px; position: absolute; top: 0; left: 0;">
 
+						</div>
 					</div>
 				</div>
 			</md-card>
