--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -306,12 +306,12 @@
 		<!--  -->
 
 		<!--  -->
-		<div layout="row" layout-align="center center">
-			<md-card layout-wrap layout="row" layout-align="center center" class="md-whiteframe-16dp" style="background: {{base_hue_lightest.value}}; width: 80%; margin-bottom: -64px; position: relative; max-height: 600px; min-height: 600px;">
+		<div layout="row" layout-align="center center" style="overflow: hidden;">
+			<md-card layout-wrap layout="row" layout-align="center center" class="md-whiteframe-16dp" style="background: {{base_hue_lightest.value}}; width: 80%; margin-bottom: -64px; position: relative; max-height: 600px; min-height: 600px; overflow-y: scroll">
 				<div class="md-whiteframe-4dp" style="background-color: #F5F5F5; z-index: 2; min-height: 80px; position: absolute; top: 0; left: 0; width: 100%;" layout="row" layout-align="start center">
 					<span class="md-title" style="padding: 16px; font-size: 24px; color: {{base_hue_darkest.value}};">Mycoskie + McInnis + Associates Blog</span>
 				</div>
-				<div flex-gt-sm="20" layout="column" layout-align="center center" style="background-color: {{base_hue_darker.value}}; height: 100%; min-height: 520px; margin-top: 80px;">
+				<div flex-gt-sm="20" layout="column" layout-align="center center" style="background-color: {{primary_hue_normal.value}}; height: 100%; min-height: 520px; margin-top: 80px;">
 				</div>
 				<div flex="80" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2; overflow-y: auto; min-height: 520px; margin-top: 80px;">
 					<div layout-wrap layout="column" layout-align="start center">
