--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -314,7 +314,7 @@
 				<div flex-gt-sm="20" layout="column" layout-align="center center" style="background-color: {{primary_hue_normal.value}}; height: 100%; min-height: 520px; margin-top: 80px;">
 				</div>
 				<div flex="80" layout="row" layout-align="center center" style="position: relative; background-color: #fafafa; overflow-y: scroll; min-height: 520px; margin-top: 80px;">
-					<div layout-wrap layout="column" layout-align="start center" style="height: 600px;">
+					<div layout-wrap layout="column" layout-align="start center">
 
 					</div>
 				</div>
