--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -333,32 +333,32 @@
 					<div layout-padding flex="33">
 						<md-list>
 							<md-list-item>
-								<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Products</p>
+								<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Services</p>
 							</md-list-item>
 							<md-list-item>
-								<p style="color: {{base_hue_lightest.value}};">Nutrition</p>
+								<p style="color: {{base_hue_lightest.value}};">Civil Engineering</p>
 							</md-list-item>
 							<md-list-item>
-								<p style="color: {{base_hue_lightest.value}};">Clothing</p>
+								<p style="color: {{base_hue_lightest.value}};">Surveying</p>
 							</md-list-item>
 							<md-list-item>
-								<p style="color: {{base_hue_lightest.value}};">Produce</p>
+								<p style="color: {{base_hue_lightest.value}};">Landscape Architecture</p>
 							</md-list-item>
 						</md-list>
 					</div>
 					<div layout-padding flex="33">
 						<md-list>
 							<md-list-item>
-								<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Navigation</p>
+								<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Quick Links</p>
 							</md-list-item>
 							<md-list-item>
-								<p style="color: {{base_hue_lightest.value}};">Shop</p>
+								<p style="color: {{base_hue_lightest.value}};">Careers</p>
 							</md-list-item>
 							<md-list-item>
-								<p style="color: {{base_hue_lightest.value}};">Blog</p>
+								<p style="color: {{base_hue_lightest.value}};">Services</p>
 							</md-list-item>
 							<md-list-item>
-								<p style="color: {{base_hue_lightest.value}};">Social</p>
+								<p style="color: {{base_hue_lightest.value}};">Projects</p>
 							</md-list-item>
 						</md-list>
 					</div>
