--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -311,14 +311,34 @@
 				<div class="md-whiteframe-4dp" style="background-color: #F5F5F5; z-index: 2; min-height: 80px; position: absolute; top: 0; left: 0; width: 100%;" layout="row" layout-align="start center">
 					<span class="md-title" style="padding: 16px; font-size: 24px; color: {{base_hue_darkest.value}};">Mycoskie + McInnis + Associates Blog</span>
 				</div>
-				<div flex-gt-sm="20" layout="column" layout-align="center center" style="background-color: {{primary_hue_normal.value}}; height: 100%; min-height: 520px; margin-top: 80px;">
-					<md-list-item ng-click="navigateTo('data usage', $event)">
-						<md-icon style="color: {{base_hue_lightest.value}}">chevron_right</md-icon>
-						<p>Blog Post One</p>
-					</md-list-item>
-				</div>
-				<div flex="80" layout="row" layout-align="center center" style="position: relative; background-color: #fafafa; overflow-y: scroll; min-height: 520px; margin-top: 80px;">
-					<div layout-wrap layout="column" layout-align="start center" style="position: absolute; top: 0; left: 0; width: 100%; height: 800px;">
+				<div flex="100" layout="row" layout-align="center center" style="position: relative; background-color: #fafafa; overflow-y: scroll; min-height: 520px; margin-top: 80px;">
+					<div layout-wrap layout="column" layout-align="start center" flex="40" style="position: absolute; top: 0; left: 0;">
+						<md-card style="background: transparent; height: 90%; padding: 0;">
+							<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
+							<md-card-header>
+								<md-card-header-text>
+									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">BLOG POST ONE</span>
+								</md-card-header-text>
+							</md-card-header>
+							<md-card-content>
+								<p style="color: {{base_hue_darkest.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+							</md-card-content>
+						</md-card>
+					</div>
+					<div layout-wrap layout="column" layout-align="start center" flex="40" style="position: absolute; top: 0; left: 0;">
+						<md-card style="background: transparent; height: 90%; padding: 0;">
+							<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
+							<md-card-header>
+								<md-card-header-text>
+									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">BLOG POST ONE</span>
+								</md-card-header-text>
+							</md-card-header>
+							<md-card-content>
+								<p style="color: {{base_hue_darkest.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+							</md-card-content>
+						</md-card>
+					</div>
+					<div layout-wrap layout="column" layout-align="start center" flex="40" style="position: absolute; top: 0; left: 0;">
 						<md-card style="background: transparent; height: 90%; padding: 0;">
 							<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
 							<md-card-header>
