--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -312,9 +312,9 @@
 					<span class="md-title" style="padding: 16px; font-size: 24px; color: {{base_hue_darkest.value}};">Mycoskie + McInnis + Associates Blog</span>
 				</div>
 				<div flex="100" layout="row" layout-align="center center" style="position: relative; background-color: #fafafa; overflow-y: scroll; min-height: 520px; margin-top: 80px;">
-					<div layout="row" layout-align="start center" layout-wrap flex="100" style="position: absolute; top: 0; left: 0;">
-						<div layout="row" layout-align="center center" layout-wrap>
-							<md-card style="background: transparent;" flex="40">
+					<div style="position: absolute; top: 0; left: 0; width: 100%;">
+						<div layout="row" layout-align="start center" layout-wrap>
+							<md-card style="background: transparent;" flex="50">
 								<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
 								<md-card-header>
 									<md-card-header-text>
