--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -309,12 +309,12 @@
 		<div layout="row" layout-align="center center" style="overflow: hidden;">
 			<md-card layout-wrap layout="row" layout-align="center center" class="md-whiteframe-16dp" style="background: {{base_hue_lightest.value}}; width: 80%; margin-bottom: -64px; position: relative; max-height: 600px; min-height: 600px; overflow: hidden;">
 				<div class="md-whiteframe-4dp" style="background-color: #F5F5F5; z-index: 2; min-height: 80px; position: absolute; top: 0; left: 0; width: 100%;" layout="row" layout-align="start center">
-					<span class="md-title" style="padding: 16px; font-size: 24px; color: {{base_hue_darkest.value}};">Mycoskie + McInnis + Associates Blog</span><span flex></span><md-datepicker ng-model="blog_filter" md-placeholder="Enter date"></md-datepicker>
+					<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">MMA Blog</span><span flex></span><md-datepicker ng-model="blog_filter" md-placeholder="Enter date"></md-datepicker>
 				</div>
 				<div flex="100" layout="row" layout-align="center center" style="position: relative; background-color: #fafafa; overflow-y: scroll; min-height: 520px; margin-top: 80px;">
 					<div style="position: absolute; top: 0; left: 0; width: 100%;">
-						<div layout="row" layout-align="start center" layout-wrap>
-							<md-card style="background: transparent;" flex="30">
+						<div layout="row" layout-align="center center" layout-wrap>
+							<md-card class="md-whiteframe-4dp" style="background: transparent;" flex="30">
 								<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
 								<md-card-header>
 									<md-card-header-text>
@@ -325,7 +325,7 @@
 									<p style="color: {{base_hue_darkest.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
 								</md-card-content>
 							</md-card>
-							<md-card style="background: transparent;" flex="30">
+							<md-card class="md-whiteframe-4dp" style="background: transparent;" flex="30">
 								<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
 								<md-card-header>
 									<md-card-header-text>
@@ -336,7 +336,7 @@
 									<p style="color: {{base_hue_darkest.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
 								</md-card-content>
 							</md-card>
-							<md-card style="background: transparent; margin-bottom: 64px;" flex="30">
+							<md-card class="md-whiteframe-4dp" style="background: transparent;" flex="30">
 								<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
 								<md-card-header>
 									<md-card-header-text>
