--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -313,7 +313,7 @@
 				</div>
 				<div flex="100" layout="row" layout-align="center center" style="position: relative; background-color: #fafafa; overflow-y: scroll; min-height: 520px; margin-top: 80px;">
 					<div style="position: absolute; top: 0; left: 0; width: 100%; padding-bottom: 80px; padding-top: 16px;">
-						<div layout="row" layout-align="center center" layout-wrap>
+						<div layout="row" layout-align="center start" layout-wrap>
 							<md-card class="md-whiteframe-4dp" style="background: #f5f5f5;" flex="30">
 								<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
 								<md-card-header>
@@ -325,7 +325,7 @@
 									<h4 style="color: {{base_hue_darkest.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</h4>
 								</md-card-content>
 								<md-divider></md-divider>
-								<md-card-actions layout="row" layout-align="end center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
+								<md-card-actions layout="row" layout-align="start center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
 									<md-button class="md-fab" aria-label="Share" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; position: absolute; top: -28px; right: 32px;">
 							            <md-icon>share</md-icon>
 							        </md-button>
@@ -344,7 +344,7 @@
 									<h4 style="color: {{base_hue_darkest.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</h4>
 								</md-card-content>
 								<md-divider></md-divider>
-								<md-card-actions layout="row" layout-align="end center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
+								<md-card-actions layout="row" layout-align="start center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
 									<md-button class="md-fab" aria-label="Share" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; position: absolute; top: -28px; right: 32px;">
 							            <md-icon>share</md-icon>
 							        </md-button>
@@ -363,7 +363,7 @@
 									<h4 style="color: {{base_hue_darkest.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</h4>
 								</md-card-content>
 								<md-divider></md-divider>
-								<md-card-actions layout="row" layout-align="end center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
+								<md-card-actions layout="row" layout-align="start center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
 									<md-button class="md-fab" aria-label="Share" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; position: absolute; top: -28px; right: 32px;">
 							            <md-icon>share</md-icon>
 							        </md-button>
