--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -309,7 +309,7 @@
 		<div layout="row" layout-align="center center" style="overflow: hidden;">
 			<md-card layout-wrap layout="row" layout-align="center center" class="md-whiteframe-16dp" style="background: {{base_hue_lightest.value}}; width: 80%; margin-bottom: -64px; position: relative; max-height: 600px; min-height: 600px; overflow: hidden;">
 				<div class="md-whiteframe-4dp" style="background-color: #F5F5F5; z-index: 2; min-height: 80px; position: absolute; top: 0; left: 0; width: 100%; padding: 16px;" layout="row" layout-align="start center">
-					<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">MMA Blog</span><span flex></span><md-datepicker ng-model="blog_filter" md-placeholder="Enter date"></md-datepicker>
+					<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">MMA Blog</span><md-datepicker ng-model="blog_filter" md-placeholder="Enter date"></md-datepicker>
 				</div>
 				<div flex="100" layout="row" layout-align="center center" style="position: relative; background-color: #fafafa; overflow-y: scroll; min-height: 520px; margin-top: 80px;">
 					<div style="position: absolute; top: 0; left: 0; width: 100%; padding-bottom: 80px; padding-top: 16px;">
