--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -322,7 +322,7 @@
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
-									<h4 style="color: {{base_hue_darkest.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</h4>
+									<p style="color: {{base_hue_darkest.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
 								</md-card-content>
 								<md-divider></md-divider>
 								<md-card-actions layout="row" layout-align="start center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
@@ -341,7 +341,7 @@
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
-									<h4 style="color: {{base_hue_darkest.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</h4>
+									<p style="color: {{base_hue_darkest.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
 								</md-card-content>
 								<md-divider></md-divider>
 								<md-card-actions layout="row" layout-align="start center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
@@ -360,7 +360,7 @@
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
-									<h4 style="color: {{base_hue_darkest.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</h4>
+									<p style="color: {{base_hue_darkest.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 								</md-card-content>
 								<md-divider></md-divider>
 								<md-card-actions layout="row" layout-align="start center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
