fab button blog -- index

--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -326,7 +326,7 @@
 								</md-card-content>
 								<md-divider></md-divider>
 								<md-card-actions layout="row" layout-align="start center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
-									<md-button class="md-fab" aria-label="Share" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; position: absolute; top: -28px; right: 32px;">
+									<md-button class="md-fab" aria-label="Share" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; position: absolute; top: -28px; right: 32px; z-index: 1">
 							            <md-icon>share</md-icon>
 							        </md-button>
 									<md-button>Action 1</md-button>
@@ -345,7 +345,7 @@
 								</md-card-content>
 								<md-divider></md-divider>
 								<md-card-actions layout="row" layout-align="start center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
-									<md-button class="md-fab" aria-label="Share" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; position: absolute; top: -28px; right: 32px;">
+									<md-button class="md-fab" aria-label="Share" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; position: absolute; top: -28px; right: 32px; z-index: 1">
 							            <md-icon>share</md-icon>
 							        </md-button>
 									<md-button>Action 1</md-button>
@@ -364,7 +364,7 @@
 								</md-card-content>
 								<md-divider></md-divider>
 								<md-card-actions layout="row" layout-align="start center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
-									<md-button class="md-fab" aria-label="Share" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; position: absolute; top: -28px; right: 32px;">
+									<md-button class="md-fab" aria-label="Share" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; position: absolute; top: -28px; right: 32px; z-index: 1">
 							            <md-icon>share</md-icon>
 							        </md-button>
 									<md-button>Action 1</md-button>
