--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -154,7 +154,7 @@
 		<div layout="row" layout-align="center center" style="background-color: #f5f5f5;">
 			<md-card layout="column" layout-align="center center" style="background: transparent; width: 80%; z-index: 2; position: relative;">
 				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">SOME OF OUR PARTNERS</h1>
-				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
+				<div flex="100" layout="row" layout-align="center center">
 					<div layout-wrap layout="row" layout-align="center center">
 						<img src="media/spsd-logo.png" style="max-height: 72px;">
 					</div>
