--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -116,7 +116,7 @@
 		<!-- Slideshow -->
 
 		<!--  -->
-		<div layout="row" layout-align="center center">
+		<div layout="row" layout-align="center center" style="margin-bottom: 64px;">
 			<md-card layout="row" layout-align="center center" style="background: {{primary_hue_normal.value}}; width: 80%; margin-top: -64px; z-index: 2; overflow: hidden; position: relative;">
 				<div flex="33" layout="column" layout-align="center center" style="background-color: {{primary_hue_normal.value}}; height: 100%;">
 					<h1 style="color: {{base_hue_lightest.value}}; font-size: 24px; line-height: 64px; margin: 0; z-index: 2">Some Sample Text Here</h1>
